--- a/Tasks App/Base.lproj/Main.storyboard
+++ b/Tasks App/Base.lproj/Main.storyboard
@@ -141,6 +141,20 @@
                                     <action selector="addCategory:" destination="y0a-n1-pKH" eventType="touchUpInside" id="DBA-w8-6T3"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Local notifications" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MQQ-UC-Nve">
+                                <rect key="frame" x="16" y="421" width="139" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="PEz-zd-yg9">
+                                <rect key="frame" x="310" y="416" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="notifswitch:" destination="y0a-n1-pKH" eventType="touchUpInside" id="ndL-Vp-0hk"/>
+                                </connections>
+                            </switch>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="hh9-pI-XFn"/>
@@ -148,11 +162,17 @@
                     <connections>
                         <outlet property="categoryNameField" destination="Cnt-9V-dhH" id="9cb-Rm-EuW"/>
                         <outlet property="colorsPickerView" destination="393-5X-NtP" id="4My-Y4-6Xz"/>
+                        <outlet property="notificationSwitch" destination="PEz-zd-yg9" id="LmV-VL-Rdd"/>
                         <outlet property="settingsViewModel" destination="4Pr-hZ-GBI" id="lIy-Pr-Hm6"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="XSi-xZ-zKH" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <customObject id="4Pr-hZ-GBI" customClass="SettingsViewModel" customModule="Tasks_App" customModuleProvider="target"/>
+                <customObject id="jzp-8K-RWK" customClass="CategoriesAdder" customModule="Tasks_App" customModuleProvider="target"/>
+                <customObject id="4Pr-hZ-GBI" customClass="SettingsViewModel" customModule="Tasks_App" customModuleProvider="target">
+                    <connections>
+                        <outlet property="categoriesAdder" destination="jzp-8K-RWK" id="aZi-cD-gyY"/>
+                    </connections>
+                </customObject>
             </objects>
             <point key="canvasLocation" x="1878" y="505"/>
         </scene>
@@ -238,7 +258,7 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="1860" y="-660"/>
+            <point key="canvasLocation" x="1911" y="-276"/>
         </scene>
         <!--Task Details View Controller-->
         <scene sceneID="pJK-Qj-z4S">
@@ -308,13 +328,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zyH-Ah-1Tx">
-                                <rect key="frame" x="124" y="217" width="235" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zYc-Kd-HXR">
                                 <rect key="frame" x="107" y="404" width="162" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -326,6 +339,13 @@
                                     <action selector="deleteTask:" destination="bjO-r0-lNN" eventType="touchUpInside" id="ibb-tB-yFj"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zyH-Ah-1Tx">
+                                <rect key="frame" x="124" y="217" width="235" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="o9L-tI-J4B"/>
@@ -346,7 +366,7 @@
                     </connections>
                 </customObject>
             </objects>
-            <point key="canvasLocation" x="2568.8000000000002" y="-290.10494752623691"/>
+            <point key="canvasLocation" x="2838" y="93"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="uko-cI-yVu">
